# CB2

./: README.md  pyproject.toml
experiments/gen_dataset_HF/: gen_dataset.py
experiments/gen_dataset_HF/conf/: generator.yaml
experiments/train_black_box/: train.py
experiments/train_black_box/conf/: training.yaml
experiments/train_cb2/: train.py
experiments/train_cb2/conf/: training.yaml
src/cb2/dataset/: constant.py  loader.py
src/cb2/models/: module.py
src/cb2/neurhci/: aggregators_torch.py  basic_nodes_torch.py  experimental_torch.py  marginal_utilities_torch.py  neurhci_torch.py  test_script_torch.py
src/cb2/trainer/: abstract.py  module.py
